packages/serverless-workflow-diagram-editor/src/react-flow/diagram/Diagram.css
/*
 * Copyright 2021-Present The Serverless Workflow Specification Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

@reference "../../styles.css";

/* react flow overrides */
@layer react-flow-overrides {
  .dec-root .diagram-background {
    --xy-background-pattern-color: #ccc;
    background-color: #e5e4e2;
  }

  .dec-root.dark .diagram-background {
    --xy-background-pattern-color: inherit;
    background-color: inherit;
  }

  /* react flow pointer behavior */
  .dec-root .react-flow__pane {
    cursor: default !important;
  }

  /* node hovering */
  .dec-root .react-flow__node {
    cursor: pointer !important;
  }

  /* node dragging */
  .dec-root .react-flow__node.dragging {
    cursor: grabbing !important;
  }

  /* dragging the pane (panning) */
  .dec-root .react-flow__pane.dragging {
    cursor: grab !important;
  }

  .dec-root .react-flow__pane.selection {
    cursor: grab !important;
  }

  /* space is held and pan is active */
  .dec-root .react-flow__pane:active {
    cursor: grabbing !important;
  }

  /* hide handles in read-only mode */
  .dec-root .read-only .react-flow__handle {
    visibility: hidden !important;
    width: 0 !important;
    height: 0 !important;
    min-width: 0 !important;
    min-height: 0 !important;
  }
}
/* ... */

